<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="fill_parent"
  android:scrollbars="none">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">

    <!--Dummy view used to make the width of the activity bigger-->
    <View
      android:layout_width="1000dp"
      android:layout_height="1dip" />

    <TextView
      android:id="@+id/lbl_about_this_app"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dip"
      android:layout_marginBottom="5dip"
      android:text="@string/about_this_app_title"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="72dip"
        android:layout_height="72dip"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/about_this_app" />

      <TextView
        android:id="@+id/about_this_app_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img_app_icon"
        android:text="@string/about_this"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <TextView
      android:id="@+id/lbl_app_libraries"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dip"
      android:layout_marginBottom="5dip"
      android:text="@string/app_libraries"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
      android:id="@+id/library_maven"
      android:text="@string/library_maven"
      style="@style/LibraryCheckbox" />

    <TextView
      android:id="@+id/library_abs"
      android:text="@string/library_abs"
      style="@style/LibraryCheckbox" />

    <TextView
      android:id="@+id/library_wasp"
      android:text="@string/library_wasp"
      style="@style/LibraryCheckbox" />

    <TextView
      android:id="@+id/library_groundy"
      android:text="@string/library_groundy"
      style="@style/LibraryCheckbox" />

    <TextView
      android:id="@+id/library_persistence"
      android:text="@string/library_persistence"
      style="@style/LibraryCheckbox" />

    <TextView
      android:id="@+id/lbl_about_me"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dip"
      android:layout_marginBottom="5dip"
      android:text="@string/about_me"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
      android:id="@+id/about_author_container"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dip"
      android:visibility="gone">

      <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="72dip"
        android:layout_height="72dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:src="@drawable/avatar"
        android:contentDescription="@string/about_me" />

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/img_avatar"
        android:text="@string/about_me_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <LinearLayout
      android:id="@+id/contact_buttons_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="right"
      android:visibility="gone">

      <Button
        android:id="@+id/btn_tweet"
        android:drawableRight="@drawable/btn_twitter"
        style="@style/PromoButton" />

      <Button
        android:id="@+id/btn_github"
        android:drawableRight="@drawable/btn_github"
        style="@style/PromoButton" />

      <Button
        android:id="@+id/btn_stackoverflow"
        android:drawableRight="@drawable/btn_stackoverflow"
        style="@style/PromoButton" />

      <Button
        android:id="@+id/btn_feedback"
        android:drawableRight="@drawable/btn_feedback"
        style="@style/PromoButton" />

    </LinearLayout>

  </LinearLayout>

</ScrollView>