<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/switcher_email_subscription"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:inAnimation="@android:anim/fade_in"
  android:outAnimation="@android:anim/fade_out">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/faked_promise"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
      android:id="@+id/edit_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/email"
      android:textColor="#ffffff" />

    <Button
      android:id="@+id/btn_subscribe"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/subscribe" />
  </LinearLayout>

  <!--this will be shown while service's info is being fetched-->
  <ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    style="@android:style/Widget.ProgressBar.Large"
    android:layout_marginRight="5dp" />
</ViewSwitcher>